# better-rag-open

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.docgen  Graph_API_Integration.docx  README.md  agentic-rag-implementation-plan.md  check_cc.py  check_imports.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_customer_care_schema.py  003_add_extraction_method.py
config/: settings.py
docs/: aks-implementation-plan.md
infra/deployments/agent/: deployment.yaml  secret-provider.yaml  service.yaml
infra/deployments/clusterissuer/: clusterissuer.yaml
infra/deployments/docgen/: deployment.yaml  service.yaml  (+1 more)
infra/new-terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/: acr.tf  databases.tf  dns.tf  identity.tf  keyvault.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  variables.tf
scripts/: local_ingest.py  openwebui_server.py  start-workers.sh  test_connections.py  test_docgen.py  test_pipeline.py  test_pptx_chunk.py  test_query.py  test_sharepoint_creds.py  test_slide_renderer.py  test_vision_slide.py
src/: celery_app.py  cli.py  logging_config.py  main.py
src/agents/: department_agent.py
src/api/: sse.py
src/chunking/: adaptive_chunker.py  boundary_detector.py
src/connectors/: change_handlers.py  delta_sync.py  graph_client.py  permissions.py  sharepoint.py  webhooks.py
src/customer_care/: __init__.py  agent.py  change_handler.py  delta_sync.py  ingestion.py  models.py  prompts.py  retrieval.py  vector_store.py
src/document_generation/: base.py  chart_builder.py  docx_generator.py  generator_factory.py  pptx_generator.py  spec_builder.py  visual_qa.py  xlsx_generator.py
src/embedding/: azure_openai.py  base.py
src/graph/: edges.py  orchestrator.py
src/knowledge_graph/: builder.py  entity_extractor.py  queries.py  schema.py
src/models/: __init__.py  document.py  enums.py  permission.py  state.py  sync.py
src/openwebui/: action_function.py  filter_function.py  pipe.py  pipe_function.py  simple_llm_pipe.py
src/processing/: ingestion.py  metadata.py  pipeline.py  summarizer.py
src/retrieval/: graph_search.py  hyde.py  metadata_filter.py  pipeline.py  query.py  query_analyzer.py  reranker.py  vector_search.py
src/skills/: _loader.py
src/storage/: blob_store.py  cache.py  db.py  vector_store.py
src/templates/: _generate_placeholders.py
tests/: conftest.py
tests/fixtures/: README.md  generate_fixtures.py
tests/integration/: test_document_generation.py  test_ingestion_pipeline.py
tests/k6/: load_test.js  smoke_test.js
tests/unit/: conftest.py  test_chunker.py  test_crud_poller.py  test_delta_sync.py  test_graph_client.py  test_query_analyzer.py  test_webhooks.py
(+135 files in other folders)
