[project]
name = "better-rag"
version = "0.1.0"
description = "Enterprise Agentic RAG System with SharePoint integration, RBAC, and document generation"
requires-python = ">=3.11"
dependencies = [
    # === Web Framework ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httptools>=0.6.0",
    "sse-starlette>=2.1.0",

    # === Task Queue ===
    "celery[redis]>=5.4.0",
    "flower>=2.0.0",
    "gevent>=24.2.0",

    # === LLM Frameworks ===
    "langgraph>=0.2.0",
    "langgraph-checkpoint-redis>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",

    # === Microsoft Graph / SharePoint (install via: pip install -e ".[sharepoint]") ===
    "msal>=1.31.0",
    "httpx>=0.27.0",

    # === Azure Services ===
    "azure-ai-documentintelligence>=1.0.0",
    "azure-storage-blob>=12.23.0",
    "azure-identity>=1.19.0",
    "aiohttp>=3.9.0",

    # === Embedding & Reranking ===
    "openai>=2.20.0",
    "cohere>=5.0.0",

    # === Database ===
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.5",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",

    # === Neo4j ===
    "neo4j>=5.25.0",

    # === Redis ===
    "redis[hiredis]>=5.2.0",

    # === Document Parsing ===
    "pymupdf>=1.24.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.5",
    "python-docx>=1.1.0",

    # === NLP ===
    "spacy>=3.7.0",
    "tiktoken>=0.8.0",

    # === Chunking ===
    "langchain-text-splitters>=0.3.0",
    "numpy>=1.26.0,<2.0",

    # === Document Generation ===
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "markitdown>=0.1.0",

    # === Configuration ===
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # === Observability ===
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",

    # === CLI ===
    "typer>=0.12.0",

    # === Utilities ===
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
sharepoint = [
    "msgraph-sdk>=1.6.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.29.0",
]

[project.scripts]
better-rag = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
